# chat-server

./: .env  Cargo.toml
.sqlx/: query-992398b3ecaf25912f375b7a63f700f884c3c50dc9292d42ddc94f5a81c02a32.json
src/: db.rs  email.rs  errors.rs  lib.rs  middleware.rs  model.rs  routes.rs  service.rs  socket.rs  utils.rs
src/db/: conversation.rs  user.rs
src/middleware/: auth.rs
src/middleware/auth/: jwt_auth.rs  validator.rs
src/model/: conversation.rs  friend.rs  message.rs  user.rs
src/routes/: conversation.rs  friends.rs  user.rs
src/service/: friend.rs  user.rs
src/socket/: server.rs  session.rs
tests/: user.rs
