[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chat-server"
path = "bin/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
chrono = { version = "0.4.31", features = ["serde"] }
env_logger = "0.10.0"
sea-orm = {version = "0.12.5", features = ["sqlx-mysql", "runtime-tokio-rustls"]}
serde = { version = "1.0.190", features = ["derive"] }
sqlx = { version = "0.7.0", features = ["runtime-tokio-rustls", "mysql", "chrono"] }
sqlx-core = "0.7.2"
tokio-macros = "2.1.0"
uuid = { version = "1.5.0", features = ["v4", "fast-rng", "serde"] }
