[package]
name = "chat-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chat-server"
path = "bin/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = "4.4.0"
actix-web-actors = "4.2.0"
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde"] }
dotenvy = "0.15.7"
env_logger = "0.10.0"
futures-util = "0.3.29"
rand = "0.8.5"
sea-orm = {version = "0.12.5", features = ["sqlx-mysql", "runtime-tokio-rustls"]}
serde = { version = "1.0.190", features = ["derive"] }
sqlx = { version = "0.7.0", features = ["runtime-tokio-rustls", "mysql", "chrono"] }
sqlx-core = "0.7.2"
thiserror = "1.0.50"
tokio = "1.34.0"
tokio-macros = {version = "2.1.0"}
uuid = { version = "1.5.0", features = ["v4", "fast-rng", "serde"] }
log = { version = "0.4.20", features = [] }
serde_json = "1.0.108"
jwt = { version = "0.16.0" }
hmac = { version = "0.12.1", features = ["std"] }
sha2 = "0.10.8"
lazy_static = "1.4.0"
redis = {version = "0.24.0", features = ["tokio-native-tls-comp", "aio", "connection-manager"] }
lettre = "0.11.3"
lettre_email = "0.9.4"
mime = "0.3.17"
